--- a/common/pom.xml
+++ b/common/pom.xml
@@ -41,6 +41,17 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.6.2</version>
         </dependency>
-
+        
+		<dependency>
+			<groupId>org.ektorp</groupId>
+			<artifactId>org.ektorp</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 </project>
