--- a/node/pom.xml
+++ b/node/pom.xml
@@ -32,7 +32,20 @@
             <version>2.5</version>
             <scope>test</scope>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+
+<dependency>
+			<groupId>org.ektorp</groupId>
+			<artifactId>org.ektorp</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 
 
